[package]
name = "flash"
version = "0.4.0"
edition = "2024"
authors = ["HJfod", "matcool"]
description = "Documentation generator for C++"
readme = "README.md"
repository = "https://github.com/hjfod/flash"
license-file = "LICENSE"
keywords = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "2.0.0", features = ["clang_10_0"] }
clap = { version = "4.0.29", features = ["derive"] }
glob = "0.3.0"
indicatif = "0.17.2"
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
shlex = "1.1.0"
strfmt = "0.2.2"
toml = "0.5.10"
flash-macros = { path = "macros" }
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3.25"
percent-encoding = "2.2.0"
multipeek = "0.1.2"
pulldown-cmark = { version = "0.9.2", git = "https://github.com/SergioBenitez/pulldown-cmark", rev = "01d0d6d22a6c6fb390197be0739cb26b94bacf96" }
emojis = "0.5.2"
cached = "0.42.0"
serde_yaml = "0.9.17"
anyhow = "1.0.68"
minify-html = "0.15.0"
lightningcss = "1.0.0-alpha.57"
ico = "0.3.0"
# avoid ahash 0.7.x since its broken on newer rust
ahash = "0.8.11"
log = "0.4.26"
owo-colors = "4.2.0"
regex-lite = "0.1.6"
